--- a/PropertyFinder/ios/PropertyFinder/Info.plist
+++ b/PropertyFinder/ios/PropertyFinder/Info.plist
@@ -37,7 +37,7 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>PropertyFinder would like to use your location to find nearby properties</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
